# solana-transaction-parser

./: Cargo.toml  README.md  UNUSED_FIELDS_ANALYSIS.md
.github/workflows/: format.yml
src/: common.rs  discriminators.rs  error.rs  instruction_index.rs  lib.rs  message_matching_key.rs  parser.rs  parser_call_contract.rs  parser_execute_insufficient_gas.rs  parser_its_interchain_token_deployment_started.rs  parser_its_interchain_transfer.rs  parser_its_link_token_started.rs  parser_its_token_metadata_registered.rs  parser_message_approved.rs  parser_message_executed.rs  parser_native_gas_added.rs  parser_native_gas_paid.rs  parser_native_gas_refunded.rs  parser_signers_rotated.rs  redis.rs  test_utils.rs  types.rs
tests/testdata/transactions/: solana_transaction.json
