[package]
name = "solana-transaction-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
axelar-solana-gateway = { git = "https://github.com/axelarnetwork/axelar-amplifier-solana", branch = "v2-its", package = "solana-axelar-gateway", features = ["no-entrypoint"] }
axelar-solana-gas-service = { git = "https://github.com/axelarnetwork/axelar-amplifier-solana", branch = "v2-its", package = "solana-axelar-gas-service", features = ["no-entrypoint"] }
axelar-solana-its = { git = "https://github.com/axelarnetwork/axelar-amplifier-solana", branch = "v2-its", package = "solana-axelar-its", features = ["no-entrypoint"] }
relayer-core = { git = "https://github.com/commonprefix/axelar-relayer-core", branch = "main", features = ["mocks"] }
anchor-lang = "0.31.1"
hex = "0.4.3"
bs58 = "0.5"
tracing = "0.1.40"
anyhow = "1.0.93"
serde = "1.0.215"
serde_json = "1.0.133"
uuid = { version = "1.17.0", features = ["v4"] }
dotenv = "0.15.0"
thiserror = "2.0.3"
async-trait = "0.1.88"
base64 = "0.22.1"
solana-sdk = "~2.3"
redis = { version = "0.32.4", features = ["tokio-rustls-comp"] }
solana-transaction-status = "~2.3"
borsh = { version = "1", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1.41.1", features = ["full", "test-util"] }
solana-transaction-status-client-types = "~2.3"
mockall = { version = "0.13.1", optional = true }

[dev-dependencies]
mockall = "0.13.1"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
tracing-test = "0.2.5"

[features]
mocks = ["dep:mockall"]

[lints.clippy]
uninlined_format_args = "allow"
unwrap_used = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
unnecessary_box_returns = "warn"