[package]
name = "solana-transaction-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-axelar-gateway = { version = "0.1.8", features = ["no-entrypoint"] }
solana-axelar-gas-service = { version = "0.1.8", features = ["no-entrypoint"] }
solana-axelar-its = { version = "0.1.8", features = ["no-entrypoint"] }
relayer-core = { git = "https://github.com/commonprefix/axelar-relayer-core", branch = "main", features = [
    "mocks",
] }
anchor-lang = "1.0.0-rc.1"
hex = "0.4.3"
bs58 = "0.5"
tracing = "0.1.40"
anyhow = "1.0.93"
serde = "1.0.215"
serde_json = "1.0.133"
uuid = { version = "1.17.0", features = ["v4"] }
dotenv = "0.15.0"
thiserror = "2.0.3"
async-trait = "0.1.88"
base64 = "0.22.1"
solana-sdk = "~3.0"
solana-sdk-ids = "~3.0"
solana-transaction-status = "~3.1"
solana-transaction-status-client-types = "~3.1"
redis = { version = "0.32.4", features = ["tokio-rustls-comp"] }
borsh = { version = "1.6", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1.41.1", features = ["full", "test-util"] }
mockall = { version = "0.13.1", optional = true }

[dev-dependencies]
mockall = "0.13.1"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
tracing-test = "0.2.5"

[features]
mocks = ["dep:mockall"]

[lints.clippy]
uninlined_format_args = "allow"
unwrap_used = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
unnecessary_box_returns = "warn"
